--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://example.org/'
 languageCode = 'pt-br'
-title = 'Today I Learned'
+title = 'Lucas Bacelar: TIL'
 theme = 'PaperMod'
